Changed Structure of Website
Added a starting 11 section

--- a/index.html
+++ b/index.html
@@ -1,12 +1,62 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>HTML Tutorial</title>
+    <title>Juventus</title>
 </head>
 <body>
 
-  <h1>This is a heading</h1>
-  <p>This is a paragraph.</p>
-
+  <h1>Juventus F.C?</h1>
+  <p>
+    <a href="https://en.wikipedia.org/wiki/Juventus_F.C.">Juventus</a>
+     is a dividion one Italian soccer team based in Northern Italy, yet has fans all over the world!
+  </p>
+  <br>
+  <h1>Meet the Starting 11</h1>
+  <br>
+  <ul>
+    <li>Cristiano Ronaldo</li>
+      <ol>
+        <li>Natioanlity Portuguese</li>
+      </ol>
+    <li>Paulo Dybala</li>
+      <ol>
+        <li>Nationality Argentinian</li>
+      </ol>
+    <li>Alvaro Morata</li>
+      <ol>
+        <li>Nationality Spanish</li>
+      </ol>
+    <li>Dejan Kulusevski</li>
+      <ol>
+        <li>Nationality Swedish</li>
+      </ol>
+    <li>Adrian Rabiot</li>
+      <ol>
+        <li>Nationality French</li>
+      </ol>
+    <li>Weston Mkinnie</li>
+      <ol>
+        <li>Nationality American</li>
+      </ol>
+    <li>Melo Arthur</li>
+      <ol>
+        <li>Nationality Brazilian</li>
+      </ol>
+    <li>Juan Cuadrado</li>
+      <ol>
+        <li>Nationality Columbian</li>
+      </ol>
+    <li>Giorgio Chiellini</li>
+      <ol>
+        <li>Natioanlity Italian</li>
+      </ol>
+    <li>Alex Sandro</li>
+      <ol>
+        <li>Nationality Brazilian</li>
+      </ol>
+    <li>Wojciech Szczesny</li>
+      <ol>
+        <li>Nationality Polish</li>
+      </ol>
 </body>
 </html>
