Added a chart for the Amount of Titles the club has won over the past 10 years

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <title>Juventus</title>
 </head>
-<body>
 
+<body>
   <h1>Juventus F.C?</h1>
+  <a href="https://en.wikipedia.org/wiki/Juventus_F.C.">
+     <img src="https://en.wikipedia.org/wiki/File:Juventus_FC_2017_icon_(black).svg">
+  </a>
   <p>
     <a href="https://en.wikipedia.org/wiki/Juventus_F.C.">Juventus</a>
      is a dividion one Italian soccer team based in Northern Italy, yet has fans all over the world!
@@ -58,5 +61,63 @@
       <ol>
         <li>Nationality Polish</li>
       </ol>
+ <br>
+ <h1>Title History From The Past 10 Years</h1>
+ <table border="1">
+    <tr>
+      <th>Date</th>
+      <th>Division</th>
+      <th>Number of Titles Won</th>
+    </tr>
+    <tr>
+      <td>2010-11</td>
+      <td>Serie A</td>
+      <td>0</td>
+    </tr>
+    <tr>
+      <td>2011-12</td>
+      <td>Serie A</td>
+      <td>1</td>
+    </tr>
+    <tr>
+      <td>2012-13</td>
+      <td>Serie A</td>
+      <td>2</td>
+    </tr>
+    <tr>
+      <td>2013-14</td>
+      <td>Serie A</td>
+      <td>2</td>
+    </tr>
+    <tr>
+      <td>2014-15</td>
+      <td>Serie A</td>
+      <td>2</td>
+    </tr>
+    <tr>
+      <td>2015-16</td>
+      <td>Serie A</td>
+      <td>3</td>
+    </tr>
+    <tr>
+      <td>2016-17</td>
+      <td>Serie A</td>
+      <td>2</td>
+    </tr>
+    <tr>
+      <td>2017-18</td>
+      <td>Serie A</td>
+      <td>2</td>
+    </tr>
+    <tr>
+      <td>2018-19</td>
+      <td>Serie A</td>
+      <td>2</td>
+    </tr>
+    <tr>
+      <td>2019-20</td>
+      <td>Serie A</td>
+      <td>1</td>
+    </tr>
 </body>
 </html>
