--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
 <body>
   <h1>Juventus F.C?</h1>
-  <a href="https://en.wikipedia.org/wiki/Juventus_F.C.">
-  <img src="https://en.wikipedia.org/wiki/File:Juventus_FC_2017_icon_(black).svg">
+  <a href="https://commons.wikimedia.org/wiki/File:600px_Nero_Juventus.png">
+  <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fcommons.wikimedia.org%2Fwiki%2FFile%3A600px_Nero_Juventus.png&psig=AOvVaw2ENWNJ7M_o9voXHSfskmjE&ust=1602530196635000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCOjM8qqgrewCFQAAAAAdAAAAABAL" width="150px" height="100px">
   </a>
   <p>
     <a href="https://en.wikipedia.org/wiki/Juventus_F.C.">Juventus</a>
