--- a/index.html
+++ b/index.html
@@ -5,64 +5,64 @@
 </head>
 
 <body>
-  <h1>Juventus F.C?</h1>
+  <h1 style="background-color:Chartreuse;">Juventus F.C?</h1>
   <a href="https://commons.wikimedia.org/wiki/File:600px_Nero_Juventus.png">
   <img src="https://upload.wikimedia.org/wikipedia/commons/d/d9/600px_Nero_Juventus.png" width="150px" height="100px">
   </a>
   <p>
-    <a href="https://en.wikipedia.org/wiki/Juventus_F.C.">Juventus</a>
-     is a dividion one Italian soccer team based in Northern Italy, yet has fans all over the world!
+    <a href="https://en.wikipedia.org/wiki/Juventus_F.C."><b>Juventus</b></a>
+     <i>is a dividion one Italian soccer team based in Northern Italy, yet has fans all over the world!</i>
   </p>
   <br>
-  <h1>Meet the Starting 11</h1>
+  <h1 style="background-color:Chartreuse;">Meet the Starting 11</h1>
   <br>
   <ul>
-    <li>Cristiano Ronaldo</li>
+    <li style="font-size:36px;">Cristiano Ronaldo</li>
       <ol>
         <li>Natioanlity Portuguese</li>
       </ol>
-    <li>Paulo Dybala</li>
+    <li style="font-size:36px;">Paulo Dybala</li>
       <ol>
         <li>Nationality Argentinian</li>
       </ol>
-    <li>Alvaro Morata</li>
+    <li style="font-size:36px;">Alvaro Morata</li>
       <ol>
         <li>Nationality Spanish</li>
       </ol>
-    <li>Dejan Kulusevski</li>
+    <li style="font-size:36px;">Dejan Kulusevski</li>
       <ol>
         <li>Nationality Swedish</li>
       </ol>
-    <li>Adrian Rabiot</li>
+    <li style="font-size:36px;">Adrian Rabiot</li>
       <ol>
         <li>Nationality French</li>
       </ol>
-    <li>Weston Mkinnie</li>
+    <li style="font-size:36px;">Weston Mkinnie</li>
       <ol>
         <li>Nationality American</li>
       </ol>
-    <li>Melo Arthur</li>
+    <li style="font-size:36px;">Melo Arthur</li>
       <ol>
         <li>Nationality Brazilian</li>
       </ol>
-    <li>Juan Cuadrado</li>
+    <li style="font-size:36px;">Juan Cuadrado</li>
       <ol>
         <li>Nationality Columbian</li>
       </ol>
-    <li>Giorgio Chiellini</li>
+    <li style="font-size:36px;">Giorgio Chiellini</li>
       <ol>
         <li>Natioanlity Italian</li>
       </ol>
-    <li>Alex Sandro</li>
+    <li style="font-size:36px;">Alex Sandro</li>
       <ol>
         <li>Nationality Brazilian</li>
       </ol>
-    <li>Wojciech Szczesny</li>
+    <li style="font-size:36px;">Wojciech Szczesny</li>
       <ol>
         <li>Nationality Polish</li>
       </ol>
  <br>
- <h1>Title History From The Past 10 Years</h1>
+ <h1 style="background-color:Chartreuse;">Title History From The Past 10 Years</h1>
  <table border="1">
     <tr>
       <th>Date</th>
