--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
  <h1 style="background-color:Chartreuse;">Title History From The Past 10 Years</h1>
  <table border="1">
     <tr>
-      <th style="background-color:blue;">Date</th>
-      <th style="background-color:blue;">Division</th>
-      <th style="background-color:blue;">Number of Titles Won</th>
+      <th style="color:blue;">Date</th>
+      <th style="color:blue;">Division</th>
+      <th style="color:blue;">Number of Titles Won</th>
     </tr>
     <tr>
       <td>2010-11</td>
